--- a/README
+++ b/README
@@ -6,23 +6,19 @@
 ## TV shows in Ubuntu with libnotify. It is using the capabilites of web
 ## application vtelevizi.cz and its short personal RSS channel.
 ##
-## For RSS channel parsing, the script uses feedparser (http://feedparser.org).
-##
 ##
 ## Dependencies
 ## ------------
-## For correct usage, you have to have python-notify and python-feedparser
-## packages installed. They are both available in standard repositories.
+## For correct usage, you have to have python-notify package installed.
+## It is available in standard repositories.
 ##
 ## Usage
 ## -----
 ## There are three configuration variables.
-## - rss_base_link - link to your rss feed from vtelevizi.cz. You have to
+## - RSS_BASE_LINK - link to your rss feed from vtelevizi.cz. You have to
 ##                   to include the token at the end of the URL.
-## - rss_update_time - after how many minutes the feed will be refreshed
-## - timeshift_from_GMT - due to the feedparser time parsing method, we have to
-##                        shift every showtime we recieve in correct timezone.
-## - tell_m_n_minutes_before - how many minutes before the start of the show
+## - RSS_UPDATE_TIME - after how many minutes the feed will be refreshed
+## - TELL_ME_N_MINUTES_BEFORE - how many minutes before the start of the show
 ##                             the notification should be displayed
 ##
 ## After configuration, the script runs in an infinite loop. Every minute, it
