readme update + minor corrections

--- a/README
+++ b/README
@@ -14,15 +14,18 @@
 ##
 ## Usage
 ## -----
-## There are three configuration variables.
-## - RSS_BASE_LINK - link to your rss feed from vtelevizi.cz. You have to
-##                   to include the token at the end of the URL.
+##   python vtelevizichecker.py username rsshash
+## where username is your vtelevizi.cz username and rsshash is a secret part
+## of your RSS url.
+##
+## There are two configuration variables.
 ## - RSS_UPDATE_TIME - after how many minutes the feed will be refreshed
 ## - TELL_ME_N_MINUTES_BEFORE - how many minutes before the start of the show
-##                             the notification should be displayed
+##                             the notification should be displayed. It is then
+##                             shown every minute until the start of the show.
 ##
 ## After configuration, the script runs in an infinite loop. Every minute, it
-## checkes whether some show is starting in n minutes. If yes, a notification
+## checks whether some show is starting in n minutes. If yes, a notification
 ## is shown. It is then shown every minute until the show starts. Every m
 ## minutes, RSS feed is checked again to include updates. Items are stored
 ## in local list, every time RSS is refreshed, the list is deleted.
@@ -30,7 +33,7 @@
 ##
 ## Author
 ## ------
-## Jirka Chadima, chadima.jiri@gmail.com, 01/2010
+## Jirka Chadima, chadima.jiri@gmail.com, 01/2011
 ##
 ## License
 ## -------
